// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transforms record with FTCD and PED set 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "custodyLevelIsMinimum": {
      "custodyLevel": "MINIMUM",
    },
    "notServingForSexualOffense": null,
    "usIdInCrcFacilityOrPwccUnit1": {
      "crcStartDate": 2022-02-06T00:00:00.000Z,
      "facilityName": "Facility 73",
    },
    "usIdInCrcFacilityOrPwccUnit1For60Days": {
      "sixtyDaysInCrcFacilityDate": 2022-04-07T00:00:00.000Z,
    },
    "usIdIncarcerationWithin6MonthsOfFtcdOrPedOrEprd": {
      "fullTermCompletionDate": 2022-08-12T00:00:00.000Z,
      "paroleEligibilityDate": 2022-03-19T00:00:00.000Z,
    },
    "usIdNoAbsconsionEscapeAndEludingPoliceOffensesWithin10Years": null,
    "usIdNotDetainersForXcrcAndCrc": null,
  },
  "externalId": "xcrc-eligible-01",
  "ineligibleCriteria": {},
  "isAlmostEligible": false,
  "isEligible": true,
  "metadata": {},
  "stateCode": "US_MI",
}
`;

exports[`transforms record with TPD set 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "custodyLevelIsMinimum": {
      "custodyLevel": "MINIMUM",
    },
    "notServingForSexualOffense": null,
    "usIdInCrcFacilityOrPwccUnit1": {
      "crcStartDate": 2022-02-06T00:00:00.000Z,
      "facilityName": "Vault 6",
    },
    "usIdInCrcFacilityOrPwccUnit1For60Days": {
      "sixtyDaysInCrcFacilityDate": 2022-04-07T00:00:00.000Z,
    },
    "usIdIncarcerationWithin6MonthsOfFtcdOrPedOrEprd": {
      "fullTermCompletionDate": null,
      "paroleEligibilityDate": null,
    },
    "usIdNoAbsconsionEscapeAndEludingPoliceOffensesWithin10Years": null,
    "usIdNotDetainersForXcrcAndCrc": null,
  },
  "externalId": "xcrc-eligible-02",
  "ineligibleCriteria": {},
  "isAlmostEligible": false,
  "isEligible": true,
  "metadata": {},
  "stateCode": "US_MI",
}
`;

exports[`transforms record with caseNotes set 1`] = `
{
  "caseNotes": {
    "SomeSection": [
      {
        "noteBody": "Some pig!",
      },
    ],
  },
  "eligibleCriteria": {
    "custodyLevelIsMinimum": {
      "custodyLevel": "MINIMUM",
    },
    "notServingForSexualOffense": null,
    "usIdInCrcFacilityOrPwccUnit1": {
      "crcStartDate": 2022-02-06T00:00:00.000Z,
      "facilityName": "Vault 6",
    },
    "usIdInCrcFacilityOrPwccUnit1For60Days": {
      "sixtyDaysInCrcFacilityDate": 2022-04-07T00:00:00.000Z,
    },
    "usIdIncarcerationWithin6MonthsOfFtcdOrPedOrEprd": {
      "fullTermCompletionDate": null,
      "paroleEligibilityDate": null,
    },
    "usIdNoAbsconsionEscapeAndEludingPoliceOffensesWithin10Years": null,
    "usIdNotDetainersForXcrcAndCrc": null,
  },
  "externalId": "xcrc-eligible-02",
  "ineligibleCriteria": {},
  "isAlmostEligible": false,
  "isEligible": true,
  "metadata": {},
  "stateCode": "US_MI",
}
`;
